# API/Controllers/Horarios/HorariosController.cs
@@ -41,6 +41,10 @@ namespace API.Controllers.CPC
 
         public async Task<List<HorarioDto>?> GetOneHorarioAsync(HorarioDto data) => await _horariosRepository.GetOneHorario(data);
 
+        [HttpGet("UpdateHorario")]
+        public async Task<HorarioDto?> updateUpdateHorario(HorarioDto param) => await _horariosRepository.UpdateHorario(param);
+
+
         #endregion
 
 
